syntax = "proto3";

package typing;

service TypingService {
  // Bidirectional streaming: Client sends typing updates, Server broadcasts events
  rpc TypingStream(stream ClientTypingEvent) returns (stream ServerTypingEvent);
}

message ClientTypingEvent {
  string channel_id = 1; // e.g. "chat:global" or "note:123"
  bool is_typing = 2;
  // Optional: sequence number or timestamp if needed for ordering
}

message ServerTypingEvent {
  string user_id = 1;
  string user_name = 2;
  string channel_id = 3;
  bool is_typing = 4;
  int64 timestamp = 5; // Unix timestamp in milliseconds
}
